--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.18)
-project(POSSemestralka C)
+project(POSBattleshipVojKac C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(POSSemestralka main.c
-        grid.c
+add_executable(POSBattleshipVojKac main.c
         grid.h
+        grid.c
         player.c
-        grid.h)
+        player.h
+)
+
+target_link_libraries(POSBattleshipVojKac curses)
