Server part implementation
Server part implementation with threads and sockets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(POSBattleshipVojKac main.c
         grid.c
         player.c
         player.h
+        server.c
 )
 
 target_link_libraries(POSBattleshipVojKac curses)
